<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <TextView
        android:id="@+id/section_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="?android:listPreferredItemHeightSmall"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:text="@string/tab_name_statistical_data"
        android:textSize="@dimen/design_tab_text_size"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scrollbars="vertical"
        android:scrollbarStyle="outsideOverlay"
        android:fadeScrollbars="false"
        android:scrollbarThumbVertical="@color/colorAccent"
        android:scrollbarSize="1dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|right"
                android:minHeight="?android:listPreferredItemHeight"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"

                >

                <TextView
                    android:id="@+id/txtVw_charsNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_help_black_24dp"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:minHeight="24dp"
                    android:text="@string/txtSummary_all_symbols_number"/>

                <TextView
                    android:id="@+id/txtVw_charsNumberWithoutSpaces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_help_black_24dp"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:minHeight="24dp"
                    android:text="@string/txtSum_without_spaces"/>

                <TextView
                    android:id="@+id/txtVw_charsWOPunct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_help_black_24dp"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:minHeight="24dp"
                    android:text="@string/txtSum_without_punctuation_marks"/>

                <TextView
                    android:id="@+id/txtVw_charsMeaningful"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_help_black_24dp"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:minHeight="24dp"
                    android:text="@string/txtSum_significant_characters_only"/>

                <TextView
                    android:id="@+id/txtVw_wordsNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_help_black_24dp"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:minHeight="24dp"
                    android:text="@string/txtSum_number_of_words"/>

                <TextView
                    android:id="@+id/txtVw_uniqueWords"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_help_black_24dp"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:minHeight="24dp"
                    android:text="@string/txtSum_unique_words"/>

                <TextView
                    android:id="@+id/txtVw_stopWords"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_help_black_24dp"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:minHeight="24dp"
                    android:text="@string/txtSum_number_of_stop_words"/>

                <TextView
                    android:id="@+id/txtVw_dilution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_help_black_24dp"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:minHeight="24dp"
                    android:text="@string/txtSum_percent_of_dilution"/>

                <TextView
                    android:id="@+id/txtVw_classicNausea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_help_black_24dp"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:minHeight="24dp"
                    android:text="@string/txtVw_classic_nausea"/>

                <TextView
                    android:id="@+id/txtVw_academicNausea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_help_black_24dp"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:minHeight="24dp"
                    android:text="@string/txtVw_academic_nausea"/>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"/>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:gravity="center|left"
                android:minHeight="?android:listPreferredItemHeight"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                >

                <TextView
                    android:id="@+id/txtVw_charsNumberInt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:gravity="center"
                    android:minHeight="24dp"
                    android:text="@string/txtSum_999999"/>

                <TextView
                    android:id="@+id/txtVw_charsNumberWithoutSpacesInt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:gravity="center"
                    android:minHeight="24dp"
                    android:text="@string/txtSum_999999"/>

                <TextView
                    android:id="@+id/txtVw_charsWOPunctInt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:gravity="center"
                    android:minHeight="24dp"
                    android:text="@string/txtSum_999999"/>

                <TextView
                    android:id="@+id/txtVw_charsMeaningfulInt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:gravity="center"
                    android:minHeight="24dp"
                    android:text="@string/txtSum_999999"/>


                <TextView
                    android:id="@+id/txtVw_wordsNumberInt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:gravity="center"
                    android:minHeight="24dp"
                    android:text="@string/txtSum_999999"/>

                <TextView
                    android:id="@+id/txtVw_uniqueWordsInt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:gravity="center"
                    android:minHeight="24dp"
                    android:text="@string/txtSum_999999"/>

                <TextView
                    android:id="@+id/txtVw_stopWordsInt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:gravity="center"
                    android:minHeight="24dp"
                    android:text="@string/txtSum_999999"/>

                <TextView
                    android:id="@+id/txtVw_dilutionInt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:gravity="center"
                    android:minHeight="24dp"
                    android:text="@string/txtSum_999999"/>

                <TextView
                    android:id="@+id/txtVw_classicNauseaInt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:gravity="center"
                    android:minHeight="24dp"
                    android:text="@string/txtSum_999999"/>

                <TextView
                    android:id="@+id/txtVw_academicNauseaInt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:gravity="center"
                    android:minHeight="24dp"
                    android:text="@string/txtSum_999999"/>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>