<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mmdj.textanalyzer_hashmap.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:id="@+id/edtTxt_input"
            android:gravity="top|left"
            android:hint="@string/EditText_Input_Hint"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_analyze"
                android:id="@+id/btn_analyze"
                android:layout_gravity="center_horizontal"
                android:onClick="analyzeText"
                android:layout_marginEnd="16dp"
                android:singleLine="false"
                style="@style/Widget.AppCompat.Button.Borderless.Colored" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_reset"
                android:id="@+id/btn_reset"
                android:layout_marginStart="16dp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:onClick="resetText"/>
        </LinearLayout>

        <ListView
            android:id="@+id/lstVw_result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0" />
    </LinearLayout>

</RelativeLayout>
